--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Makets</string>
+    <string name="sberbank_main_activity">Основная страница сбербанка</string>
+    <string name="sberbank_pin_code_activity">Страница сбербанка с пин-кодом</string>
+    <string name="qiwi_main_activity">Основная страница qiwi</string>
 </resources>
